--- a/0x03-queuing_system_in_js/package.json
+++ b/0x03-queuing_system_in_js/package.json
@@ -3,7 +3,7 @@
     "lint": "./node_modules/.bin/eslint",
     "check-lint": "lint [0-9]*.js",
     "dev": "nodemon --exec babel-node --presets @babel/preset-env",
-    "test": "jest",
+    "test": "mocha --require @babel/register --exit",
     "full-test": "./node_modules/.bin/eslint [0-9]*.js && jest"
   },
   "devDependencies": {
